--- a/vcpkg/action.yml
+++ b/vcpkg/action.yml
@@ -20,7 +20,7 @@ runs:
   using: 'composite'
   steps:
     - name: Cache vcpkg
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       if: ${{ inputs.cache }}
       with:
         key: vcpkg-${{ runner.os }}-${{ runner.arch }}-${{ github.run_id }}${{ inputs.cache }}
@@ -28,7 +28,30 @@ runs:
           vcpkg-${{ runner.os }}-${{ runner.arch }}-
         path: ${{ inputs.vcpkg-root }}
 
-    - shell: bash
+    - name: Set up vcpkg environment windows
+      if: runner.os == 'Windows'
+      shell: pwsh
+      env: 
+        VCPKG_ROOT: ${{ inputs.vcpkg-root }}
+      run: |
+        Write-Host "VCPKG_ROOT=${{ inputs.vcpkg-root }}"
+        if (Test-Path "$env:VCPKG_ROOT\vcpkg-init") {
+          . "$env:VCPKG_ROOT\vcpkg-init"
+        } else {
+          iex ((New-Object System.Net.WebClient).DownloadString('https://aka.ms/vcpkg-init.ps1'))
+        }
+        # vcpkg x-update-registry --all
+        # cd (Split-Path -Path ${{ inputs.config }} -Parent)
+        # vcpkg activate --json=env.json
+        # Write-Host "Preserving vcpkg PATH ..."
+        # (Get-Content env.json | ConvertFrom-Json).paths.PATH | ForEach-Object { $_.Trim('"') } | ForEach-Object { Write-Host $_; $env:Path += ";$_" }
+        # Write-Host "Preserving vcpkg ENV ..."
+        # (Get-Content env.json | ConvertFrom-Json).tools | ForEach-Object { $_.GetEnumerator() } | ForEach-Object { Write-Host "$($Key)=$($Value)"; $env:($Key) = $Value }
+        # Remove-Item env.json
+
+    - name: Set up vcpkg environment for linux or macOS
+      if: runner.os != 'Windows'
+      shell: bash
       env: 
         VCPKG_ROOT: ${{ inputs.vcpkg-root }}
       run: |
@@ -38,11 +61,17 @@ runs:
         else
           . <(curl https://aka.ms/vcpkg-init.sh -L)
         fi
+
+    - name: set vcpkg
+      shell: bash
+      env: 
+        VCPKG_ROOT: ${{ inputs.vcpkg-root }}
+      run: |
         vcpkg x-update-registry --all
         cd $(dirname "${{ inputs.config }}")
         vcpkg activate --json=env.json
         echo "Preserving vcpkg PATH ..."
-        jq '.paths.PATH[]' env.json | tr -d '\"' | tee /dev/stderr >> $GITHUB_PATH
+        jq '.paths.PATH[]' env.json | tr -d '\"' >> $GITHUB_PATH
         echo "Preserving vcpkg ENV ..."
-        jq '.tools | to_entries | map("\(.key)=\(.value)")[]' env.json | tr -d '\"' | tee /dev/stderr >> $GITHUB_ENV
+        jq '.tools | to_entries | map("\(.key)=\(.value)")[]' env.json | tr -d '\"' >> $GITHUB_ENV
         rm env.json
