--- a/vcpkg/action.yml
+++ b/vcpkg/action.yml
@@ -38,7 +38,7 @@ runs:
         if (Test-Path "$env:VCPKG_ROOT\vcpkg-init.ps1") {
           . "$env:VCPKG_ROOT\vcpkg-init.ps1"
         } else {
-          iex ((New-Object System.Net.WebClient).DownloadString('https://aka.ms/vcpkg-init.ps1'))
+          iex (iwr -useb https://aka.ms/vcpkg-init.ps1)
         }
 
     - name: Set up vcpkg environment for linux or macOS
