--- a/vcpkg/vcpkg-configuration.json
+++ b/vcpkg/vcpkg-configuration.json
@@ -2,6 +2,11 @@
   "registries": [
     {
       "kind": "artifact",
+      "location": "https://aka.ms/vcpkg-ce-default",
+      "name": "microsoft"
+    },
+    {
+      "kind": "artifact",
       "location": "https://artifacts.tools.arm.com/vcpkg-registry",
       "name": "arm"
     }
