--- a/vcpkg/action.yml
+++ b/vcpkg/action.yml
@@ -59,6 +59,7 @@ runs:
       env:
         VCPKG_ROOT: ${{ inputs.vcpkg-root }}
       run: |
+        echo "VCPKG_ROOT=${{ inputs.vcpkg-root }}" >> $GITHUB_ENV
         vcpkg x-update-registry --all
         cd $(dirname "${{ inputs.config }}")
         vcpkg activate --json=env.json
