--- a/.github/workflows/vcpkg-action.yml
+++ b/.github/workflows/vcpkg-action.yml
@@ -17,8 +17,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # os: [windows-2022, windows-2019, ubuntu-22.04, ubuntu-20.04, macos-13, macos-12, macos-11]
-        os: [ubuntu-22.04]
+        os: [windows-2022, windows-2019, ubuntu-22.04, ubuntu-20.04, macos-13, macos-12, macos-11]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,8 +26,6 @@ jobs:
         uses: ./vcpkg
         with:
           config: ./vcpkg/vcpkg-configuration.json
-          vcpkg-root: "${{ github.workspace }}/.vcpkg"
-          cache: "-"
 
       - name: Verify some tools
         run: |
