--- a/vcpkg/action.yml
+++ b/vcpkg/action.yml
@@ -1,6 +1,6 @@
 name: 'vcpkg environment'
 description: 'Activate vcpkg environment'
-author: 'Jonatan Antoni <jonatan.antoni@arm.com'
+author: 'Jonatan Antoni <jonatan.antoni@arm.com>'
 
 inputs:
   config:
@@ -9,7 +9,7 @@ inputs:
     default: "./vcpkg-configuration.json"
   vcpkg-root:
     description: "Root folder for vcpkg"
-    default: "./.vcpkg"
+    default: "${{ github.workspace }}/.vcpkg"
     required: false
   cache:
     description: "Cache key suffix, set to empty to disable cache."
@@ -23,7 +23,7 @@ runs:
       uses: actions/cache@v4
       if: ${{ inputs.cache }}
       with:
-        key: vcpkg-${{ runner.os }}-${{ runner.arch }}-${{ github.run_id }}${{ inputs.cache }}
+        key: vcpkg-${{ runner.os }}-${{ runner.arch }}-${{ github.run_id }}
         restore-keys: |
           vcpkg-${{ runner.os }}-${{ runner.arch }}-
         path: ${{ inputs.vcpkg-root }}
