--- a/.github/workflows/vcpkg-action.yml
+++ b/.github/workflows/vcpkg-action.yml
@@ -26,7 +26,7 @@ jobs:
         uses: ./vcpkg
         with:
           config: ./vcpkg/vcpkg-configuration.json
-
+          cache: test
       - name: Verify some tools
         run: |
           which cpackget
